codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] Prevent sleep while running  Keep your computer awake while Codex is
                                   running a thread.
  [x] Shell tool                   Allow the model to run shell commands.

  Press space to select or enter to save for next conversation
