codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_worked_for_uses_cumulative_turn_duration.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Ran echo preparing
  └ preparing

Final response.

▣ Build · gpt-5.6-sol · 2m 05s
