codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_cli_runtime_command_output_delta_active.snap
---
source: tui/src/chatwidget/tests/runtime.rs
expression: active
---
• Running printf 'stdout\nstderr\n'
  └ stdout
    stderr
