codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_cli_runtime_command_output_delta_interrupted.snap
---
source: tui/src/chatwidget/tests/runtime.rs
expression: completed
---
$ printf 'stdout\nstderr\n'
stdout
stderr
✗ (1) • <duration>
