codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_cli_runtime_command_output_delta_transcript.snap
---
source: tui/src/chatwidget/tests/runtime.rs
expression: lines_to_single_string(&transcript)
---
$ printf 'stdout\nstderr\n'
stdout
stderr
