codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_cli_runtime_user_message_omits_unsupported_media.snap
---
source: tui/src/chatwidget/tests/runtime.rs
expression: "lines_to_single_string(&inserted[0])"
---

› Please inspect the attachments.
